[gd_scene load_steps=3 format=3 uid="uid://2gpflxxxa3se"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_le20a"]
[ext_resource type="PackedScene" uid="uid://cw8og54hjiism" path="res://scenes/menus/settings_menu.tscn" id="2_wkgwa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_le20a")

[node name="MenuContent" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContent"]
layout_mode = 2

[node name="Play" type="Button" parent="MenuContent/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Settings" type="Button" parent="MenuContent/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MenuContent/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" parent="." instance=ExtResource("2_wkgwa")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MenuContent/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuContent/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuContent/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="return_to_previous" from="Settings" to="." method="_on_settings_return_to_previous"]
